Prevent overflow of sizeDimensions or image handle buttons

--- a/ts/editor/fields.scss
+++ b/ts/editor/fields.scss
@@ -10,6 +10,7 @@
 
 #fields {
     display: flex;
+    overflow-x: hidden;
     flex-direction: column;
     margin: 5px;
 }
